# llvmbpf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yaml
.github/assets/: bpf_conformance_test.txt
.github/workflows/: bpf_conformance.yml  codeql.yml  test-aot-cli.yml  test-vm.yml  unit-test.yml
cli/: CMakeLists.txt  README.md  main.cpp
example/: CMakeLists.txt  Makefile  basic.cpp  bpf_progs.h  main.cpp  maps.cpp  xdp-counter.json
example/inline/: Makefile  libmap.c  libmap.ll  main.c
example/load-llvm-ir/: Makefile  bpf_module.c
example/standalone/: Makefile  main.c  xdp-counter.ll
include/: llvmbpf.hpp
src/: compiler.cpp  compiler_utils.cpp  compiler_utils.hpp  ebpf_inst.h  llvm_jit_context.cpp  llvm_jit_context.hpp  vm.cpp
test/: CMakeLists.txt
test/bpf_conformance_runner/: CMakeLists.txt  main-bpf-conformance.cpp
test/unit-test/: CMakeLists.txt  bpf_prog_test.cpp  bpf_progs.h  llvm-aot.cpp  vm_test.cpp
unit-test/: CMakeLists.txt  bpf_progs.h
